# satprime

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  readme.md  需求描述.txt
apps/app1/: Dockerfile
apps/app10/: Dockerfile
apps/app11/: hk_telemetry.py
apps/app2/: Dockerfile
apps/app3/: Dockerfile
apps/app4/: Dockerfile
apps/app5/: Dockerfile
apps/app6/: Dockerfile
apps/app7/: Dockerfile
apps/app8/: Dockerfile
apps/app9/: Dockerfile
demo_apps/mmrotate/: Dockerfile
demo_apps/ship_detect/: Dockerfile.ship_detect  ship_detect_v2.py
satcontainer/: __init__.py  __main__.py  cli.py  config.py
satcontainer/analyzer/: __init__.py
satcontainer/builder/: __init__.py
satcontainer/checkpoint/: __init__.py
satcontainer/injector/: __init__.py  inject.py
satcontainer/injector/wrapper/: __init__.py  checkpoint_wrapper.js  checkpoint_wrapper.py
satcontainer/preheater/: __init__.py
satecode/: __init__.py  __main__.py  agent.py  cli.py  codegen.py  config.py  monitor.py  runtime.py
tests/: __init__.py  test_injector.py  test_wrapper.py
